--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.1",
     "tailwindcss": "3.3.3"
   }
 }
